# visual_sync_kontrol_f1_leo

./: .gitignore  CMakeLists.txt  Convostate.md  Project_State_1.md  Project_State_2.md  Project_temp.md  README.md  code_lager.cpp  legacy.cpp  main.cpp
Project_planning/: Project_State_V4.md  Project_State_V5.md  Project_State_V6.md  Project_State_V6_f1_display.md  Project_State_V7_feature.md  Project_State_V8.md  Project_State_V9.md  Project_claude_NextFeature.md  Project_claude_NextFeature_Part.md  Project_claude_Snippits.md  Project_state_V7.md
functions/: color_system.cpp  input_reader.cpp  input_reader_fader.cpp  input_reader_knob.cpp  input_reader_wheel.cpp  led_controller.cpp  led_controller_display.cpp  led_controller_toggle.cpp  led_scene_controller.cpp  set_matrix_led.cpp  startup_effect.cpp  startup_sequence.cpp
headers/: color_system.h  input_reader.h  input_reader_fader.h  input_reader_knob.h  input_reader_wheel.h  led_controller.h  led_controller_display.h  led_controller_toggle.h  led_scene_controller.h  set_matrix_led.h  startup_effect.h  startup_sequence.h
legacycode/: Test_printcolorsystem.cpp  Test_testMatrixLEDSystem.cpp
